<resources>
    <string name="app_name">Fakerni</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="general_header">General</string>
    <string name="security_header">Security</string>

    <!-- General Preferences -->
    <string name="theme_title">Theme</string>
    <string name="language_title">Language</string>

    <!-- security Preferences -->
    <string name="fingerprint_title">Fingerprint</string>

    <!-- Biometric fingerprint -->
    <string name="authentication_succeeded">Authentication succeeded</string>
    <string name="finger_title">Biometric login for my app</string>
    <string name="finger_subtitle">Log in using your biometric credential</string>
    <string name="finger_negative">Close</string>

    <!-- Biometric fingerprint -->
    <string name="level_urgent">Urgent</string>
    <string name="level_high">High</string>
    <string name="level_low">Low</string>

    <!-- Search Fragment -->
    <string name="query_hint">Search Here</string>

    <!-- Add Fragment -->
    <string name="task_added">Task Added</string>
    <string name="add_task">Add Task</string>
    <string name="task_name">Task Name</string>
    <string name="task_level">Task Level</string>
    <string name="task_notify">Task Notify</string>
    <string name="add_button">Add</string>
    <string name="task_string">Task</string>

    <!-- Notification -->
    <string name="notification_title">Task Notification</string>


</resources>