<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general_header"
        app:iconSpaceReserved="false">

        <ListPreference
            app:iconSpaceReserved="false"
            app:key="theme"
            app:title="@string/theme_title"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:defaultValue="light_mode"
            app:useSimpleSummaryProvider="true"/>

        <ListPreference
            app:iconSpaceReserved="false"

            app:defaultValue="en"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="language"
            app:title="@string/language_title"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/security_header">

        <ListPreference
            app:iconSpaceReserved="false"
            app:key="fingerprint"
            app:title="@string/fingerprint_title"
            app:entries="@array/fingerprint_entries"
            app:entryValues="@array/fingerprint_values"
            app:defaultValue="off"
            app:useSimpleSummaryProvider="true"/>


    </PreferenceCategory>

</PreferenceScreen>